--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ button{
     border-radius: 12px;
 }
 .header{
-    background-color: #1f2937;  
+    background-color: #28282b;  
     font-size: 24px;
     color: #F9FAF8;
     display: flex;
@@ -48,7 +48,7 @@ button{
     }
 
 .container1{
-    background-color: #1f2937;  
+    background-color: #28282b;  
     color: white;
     display: flex;
     justify-content: center;
@@ -102,7 +102,6 @@ button{
         flex-wrap: wrap;
         /* padding: 0px 24px 96px 24px; */
         }
-
         .character{
             display: flex;
             flex-direction: column;
@@ -112,27 +111,78 @@ button{
             /* gap: 8px; */
             padding: 24px;        
         }
-
         .characterInfo{
             text-align: center;
             font-size: smaller;
         }
 
-
 .container3{
     background-color: #e5e7eb;  
+    padding: 56px;
 
 }
+    .quote{
+    text-align: center;
+    font-style: italic;
+    font-size: 26px;
+    color: #272a2d;
+    margin-bottom: 10px;
+    }
+    .quote2{
+        text-align: right;
+        font-weight: 700;
+        font-size: 18px;
+
+    }
+
 .container4{
-    
+    padding: 56px;
+    display: flex;
+    justify-content: center;
+}
+
+.signUp{
+    background-color: #3882F6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 600px;
+    padding: 32px 62px 32px 62px;
+    border-radius: 12px;
+    gap: 10px;
+}
+
+.signUpFlyer{
+    font-weight: bold;
+    color: white;
+
+
+}
+
+.signUpFlyer2{
+    font-size: small;
+    color: white;
+    font-weight: 100;
+}
+
+.signUpBtn2{
+    border-color: white;
 }
 .footer{
-    
+    text-align: center;
+    background-color: #28282b;  
+    color: #F9FAF8;   
+    font-size: smaller; 
+    padding: 24px;
 }
 img{
     max-width:100%;
     height:auto;
     object-fit: cover;
+}
+
+#mrRobotPic{
+    opacity: 0.70;
 }
 
 /* Media Queries */
